# DineMate-Agentic-AI-for-Automated-Food-Ordering

./: .env.example  .gitignore  FoodBot.py  Home.py  README.md  RoadMap.md  SECURITY.md  bot.py  config.py  main.py  pyproject.toml  requirements.txt  structure.graphql  utils.py
app/: README.md  add_remove_items.py  add_users.py  analysis.py  bot.py  home.py  kitchen.py  login.py  order_management.py  preprocesser.py  register.py  track_order.py  update_prices.py  visualizers.py  voice_chat.py
app/MYSQL_Pages/: add_users.py  kitchen.py  track_order.py
app/SqlLite_Pages/: add_remove_items.py  analysis.ipynb  analysis.py  home.py  kitchen.py  login.py  order_management.py  preprocesser.py  register.py  track_order.py  update_prices.py  visualizers.py  voice_chat.py
assets/: snippet.txt
bot/: agent.py  foodbot.py  main.py
database/: README.md  SQLLITE_db.py  db.py  db_connector.py  db_creater.py  dinemate.db  foodbot.db  foodbot_schema.sql  foodbot_schemalite.sql
ipynb/: foodbot.ipynb
notebook/: foodbot.ipynb
order/: order_handler.py  order_handler_lite.py
scripts/: README.md  agent.py  config.py  db.py  db_handler.py  foodbot.ipynb  graph.py  guardrails.py  logger.py  order_utils.py  prompt.py  state.py  streaming.py  tools.py  utils.py
sqllite3_db/: db_connector.py  db_creater.py  foodbot.db  foodbot_schemalite.sql
static/: styles.css
tools/: agent_tools.py
